--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-red-contrib-opcua",
-  "version": "0.2.13",
+  "name": "node-red-contrib-opcua-2",
+  "version": "0.0.01",
   "description": "A Node-RED node to communicate via OPC UA based on node-opcua library.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mikakaraila/node-red-contrib-opcua.git"
+    "url": "https://github.com/gillerman/node-red-contrib-opcua"
   },
   "keywords": [
     "node-red",
@@ -15,8 +15,8 @@
     "node-opcua"
   ],
   "author": {
-    "name": "Mika Karaila",
-    "email": "mika.karaila@gmail.com"
+    "name": "John Gillerman",
+    "email": "john@gillerman.name"
   },
   "license": "Apache-2.0",
   "bugs": {
